@@ -89,9 +89,6 @@ import mgi_utils
 import loadlib
 import sourceloadlib
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 #globals
 
 #
