@@ -92,9 +92,6 @@ import sys
 import os
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 # LOG_DIAG
 # LOG_CUR
 # SKIP_DIAG
